[tool.poetry]
name = "account-service"
version = "0.1.0"
description = ""
authors = ["Emil Muhitdinov <laizybot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.11"}
sqlmodel = "^0.0.23"
alembic = "^1.14.1"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
